# octopus

./: .gitignore  LICENSE  README.md  inkscope_wasm.py  octopus_eth_evm.py  octopus_wasm.py  pyproject.toml  requirements.txt  run_explorer_tests.sh  run_tests.sh  setup.py
.github/: FUNDING.yml
docker/: Dockerfile
examples/BTC/: disasm_witness.py  witness_script.hex
examples/EOS/: bytecode_analytic.py  call_graph_module.py  cfg_module.py  disasm_module.py  eos_ping.cpp  eos_ping.wasm
examples/ETH/: cfg_ethernaut0.py  evm_cfg_ethernaut0.py  evm_explorer_infura.py  explorer_infura.py  wasm_getcode_infura_kovan.py
examples/ETH/bytecode/: DigixDAO_F0160428a8552AC9bB7E050D90eEADE4DDD52843.bytecode  Zeppelin_Hello_ethernaut0.bytecode  (+1 more)
examples/NEO/: cfg_lock.py  disasm_lock.py  explorer_get_code_lock.py
examples/wasm/: bytecode_analytic.py  cfg_and_callgraph_fibo.py  ssa_fibo.py  wasm_module_analysis.py
octopus/: __init__.py
octopus/analysis/: cfg.py  graph.py
octopus/api/: analyzer.py  basicblock.py  contract.py  disassembler.py  engine.py  function.py  graph.py  helper.py  instruction.py  optimizer.py  simplifier.py
octopus/arch/evm/: cfg.py  (+6 more)
octopus/config/: BTC_EXPLORER.py  EOS_EXPLORER.py  ETH_EXPLORER.py  NEO_EXPLORER.py
octopus/core/: basicblock.py  contract.py  edge.py  function.py  instruction.py  ssa.py  utils.py
octopus/engine/: disassembler.py  emulator.py  engine.py  explorer.py  ssa.py  symbolic_execution.py
octopus/tests/: btc_run_tests.sh  eos_run_tests.sh  eth_run_tests.sh  neo_run_tests.sh  wasm_run_tests.sh
tests/: flipper.wasm
(+49 files in other folders)
